2010-09-23	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - removed unused functions (find_line_match, init_rxlst, eat_files_indir)
	  - compare ignorelist/forced_attrs with DB_ATTR_UNDEF instead of -1

2010-09-17	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c: fixed compiler warning if WITH_AUDIT is not defined

2010-09-11	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Documented '-E' in man page and '--help' text

2010-09-10	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.15.1
	* Changed version to post-0.15.1

2010-09-07	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Ignore changed file name if attributes does not match
	* Allow absence of DB_CHECKINODE if file name has changed

2010-08-08	Richard van den Berg  <richard@vdberg.org>
	* Added mkgitsnapshot.sh to contrib/
	* Released version 0.15
	* Changed version to post-0.15

2010-08-06	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Updated copyright notices of list.h, list.c, md.h, md,c, symboltable.h,
	  symboltable.c, util.h and util.c
	* Escaped '-' that really mean '-' in man pages
	* Updated copyright notices of db_config.h, report.h, url.h, conf_yacc.y,
	  db_lex.l and error.c

2010-08-05	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Updated copyright notices of db_file.h, db_file.c, db_sql.h, db_sql.c,
	  do_md.h, do_md.c, gen_list.h and gen_list.c

2010-08-04	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Updated copyright notices of commandconf.h, commandconf.c, conf_lex.h,
	  conf_lex.l, db.h, db.c and db_list.h

2010-08-03	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Updated copyright notices of aide.h, aide.c, be.c, compare_db.h,
	  compare_db.c and db_disk.c

2010-08-02	Richard van den Berg  <richard@vdberg.org>
	* Removed ], from version string when --with-curl was used, closes bug 3038382

2010-08-01	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.15-rc1
	* Changed version to post-0.15-rc1
